Fix alignment of pulse animations in now-playing.scss

--- a/src/styles/components/now-playing.scss
+++ b/src/styles/components/now-playing.scss
@@ -31,10 +31,9 @@
       padding: 0;
       width: 100%
   }
-  
+
   &__cover,
   &__details {
-    padding: var(--spacing-m);
     text-align: center;
     width: 100%;
   }
@@ -43,12 +42,16 @@
     max-width: 400px;
   }
 
+  &__details {
+    padding: var(--spacing-m);
+  }
+
   &__details,
   &__rating {
     position: relative;
     z-index: 2;
   }
-  
+
   &__pulses {
     position: relative;
     --pulse-cycle-bpm-factor: 1;
@@ -92,6 +95,7 @@
     width: 100%;
     z-index: 2;
     position: relative;
+    margin: var(--spacing-m);
   }
 
   &__details {
@@ -148,22 +152,22 @@
         --rating-color--primary: #ee1b24;
         --rating-color--dark: #71420d;
       }
-      
+
       &.rating-dissatisfied {
         --rating-color--primary: #f9931f;
         --rating-color--dark: #af630d;
       }
-      
+
       &.rating-neutral {
         --rating-color--primary: #fcee21;
        --rating-color--dark: #898109;
       }
-      
+  
       &.rating-satisfied {
         --rating-color--primary: #8cc63e;
         --rating-color--dark: #3e6d00;
       }
-      
+
       &.rating-very-satisfied {
         --rating-color--primary: #009443;
         --rating-color--dark: #003306;
